--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
+  border-radius: 15px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   
@@ -49,10 +50,21 @@ body {
     display:flex;
     gap: 80px;
     flex-wrap: wrap;
-    text-align: center;
+    margin-left: 80px;
+    margin-bottom: 80px;
+    margin-top: 80px;
+    margin-right: 80px;
     
 }
 
 div {
-    border-radius: 15%;
+    border-radius: 15px;
+}
+
+img.ri {
+    border-radius: 15px;
+  }
+
+h1 {
+    text-align: center;
 }
