--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: rgba(99, 99, 99, 0.568);
 }
 
 .flip-card {
@@ -67,4 +68,5 @@ img.ri {
 
 h1 {
     text-align: center;
+    color: white;
 }
